@@ -313,7 +313,7 @@ protected:
   short mMnuIdUrgent, mMnuIdConfDeliver, mMnuIdConfRead;
   QString mForeColor, mBackColor, mBodyFont;
   QList<QLineEdit> mEdtList;
-  QString mPathAttach;
+  static QString mPathAttach;
 #ifdef HAS_KSPELL
   KSpell* mKSpell;
   KSpellConfig* mKSpellConfig;
